--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Clergy -- Fiction'
 - !lcsh 'Lourdes (France) -- Fiction'
+- GITenberg
 title: 'The Three Cities Trilogy: Lourdes, Volume 2'
 url: http://www.gutenberg.org/ebooks/8512
